# ml-playground

./: .gitignore  pyproject.toml
ml-playground/: pyproject.toml
ml-playground/src/ml_playground/: skin_cancer.py  tf_pytorch.py  torch_basic.py
notebooks/: aux8_tsne.ipynb  manifold_Learning.ipynb  pca.ipynb  pca_example.ipynb  prime_exercise.ipynb  survival_model_med.ipynb  unsupervised_example.ipynb
src/configs_demo/src/: train.py
src/ml_playground/: basicPython.py  codechanllange.py  composite_classs_functions.py  decorators.py  pca.py  product_level_price_hierarchical_bayesian.py  skin_cancer.py  skin_cancer_zw.py  utils.py  xarray.py
