[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = ""
authors = ["Zhaohui Wang <ezhwang@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_playground", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
keras = "^3.6.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "gpflow_tf"
version = "0.1.0"
description = ""
authors = ["zhaohuiwang <ezhwang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.6.0"
gpflow = "^2.9.1"
tensorflow = "^2.17.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
fastparquet = "^2024.5.0"
ipykernel = "^6.29.5"
pydot = "^3.0.2"
graphviz = "^0.20.3"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
