[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = ""
authors = ["Zhaohui Wang <ezhwang@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_playground", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
keras = "^3.6.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

